// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gradle adapter runs a subset of tests 1`] = `
{
  "logs": [
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_END",
    },
    {
      "data": {
        "TEP_LOG_FILE_NAME": "logs/logs.json",
        "TEP_TESTS_TO_RUN": "test1|test2",
        "TEP_VERSION": "0.1.0",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "DISCOVERED_PROTOCOL_ENV_VARS",
    },
    {
      "data": "0.1.0",
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_VERSION",
    },
    {
      "data": {
        "data": "gradle",
        "type": "ADAPTER_PATH",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_START",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_END",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_END",
    },
  ],
}
`;

exports[`gradle adapter runs all tests 1`] = `
{
  "logs": [
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_END",
    },
    {
      "data": {
        "TEP_LOG_FILE_NAME": "logs/logs.json",
        "TEP_VERSION": "0.1.0",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "DISCOVERED_PROTOCOL_ENV_VARS",
    },
    {
      "data": "0.1.0",
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_VERSION",
    },
    {
      "data": {
        "data": "gradle",
        "type": "ADAPTER_PATH",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_START",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_END",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_END",
    },
  ],
}
`;

exports[`jest adapter runs a subset of tests 1`] = `
{
  "?xml": {
    "attr_encoding": "UTF-8",
    "attr_version": 1,
  },
  "testsuites": {
    "attr_errors": 0,
    "attr_failures": 0,
    "attr_name": "jest tests",
    "attr_tests": 3,
    "attr_time": "MOCK_VALUE",
    "testsuite": {
      "attr_errors": 0,
      "attr_failures": 0,
      "attr_name": "Suite1",
      "attr_skipped": 1,
      "attr_tests": 3,
      "attr_time": "MOCK_VALUE",
      "attr_timestamp": "MOCK_VALUE",
      "testcase": [
        {
          "attr_classname": "Suite1 test1",
          "attr_name": "Suite1 test1",
          "attr_time": "MOCK_VALUE",
        },
        {
          "attr_classname": "Suite1 test2",
          "attr_name": "Suite1 test2",
          "attr_time": "MOCK_VALUE",
        },
        {
          "attr_classname": "Suite1 test3",
          "attr_name": "Suite1 test3",
          "attr_time": "MOCK_VALUE",
          "skipped": "",
        },
      ],
    },
  },
}
`;

exports[`jest adapter runs a subset of tests 2`] = `
{
  "logs": [
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_END",
    },
    {
      "data": {
        "TEP_LOG_FILE_NAME": "logs/logs.json",
        "TEP_TESTS_TO_RUN": "test1|test2",
        "TEP_TEST_REPORT_FILE_NAME": "report.xml",
        "TEP_TEST_REPORT_FORMAT": "junitxml",
        "TEP_TEST_REPORT_OUTPUT_DIR": "reports",
        "TEP_VERSION": "0.1.0",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "DISCOVERED_PROTOCOL_ENV_VARS",
    },
    {
      "data": "0.1.0",
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_VERSION",
    },
    {
      "data": {
        "data": "jest",
        "type": "ADAPTER_PATH",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_START",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_END",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_END",
    },
  ],
}
`;

exports[`jest adapter runs all tests 1`] = `
{
  "?xml": {
    "attr_encoding": "UTF-8",
    "attr_version": 1,
  },
  "testsuites": {
    "attr_errors": 0,
    "attr_failures": 0,
    "attr_name": "jest tests",
    "attr_tests": 3,
    "attr_time": "MOCK_VALUE",
    "testsuite": {
      "attr_errors": 0,
      "attr_failures": 0,
      "attr_name": "Suite1",
      "attr_skipped": 0,
      "attr_tests": 3,
      "attr_time": "MOCK_VALUE",
      "attr_timestamp": "MOCK_VALUE",
      "testcase": [
        {
          "attr_classname": "Suite1 test1",
          "attr_name": "Suite1 test1",
          "attr_time": "MOCK_VALUE",
        },
        {
          "attr_classname": "Suite1 test2",
          "attr_name": "Suite1 test2",
          "attr_time": "MOCK_VALUE",
        },
        {
          "attr_classname": "Suite1 test3",
          "attr_name": "Suite1 test3",
          "attr_time": "MOCK_VALUE",
        },
      ],
    },
  },
}
`;

exports[`jest adapter runs all tests 2`] = `
{
  "logs": [
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_END",
    },
    {
      "data": {
        "TEP_LOG_FILE_NAME": "logs/logs.json",
        "TEP_TEST_REPORT_FILE_NAME": "report.xml",
        "TEP_TEST_REPORT_FORMAT": "junitxml",
        "TEP_TEST_REPORT_OUTPUT_DIR": "reports",
        "TEP_VERSION": "0.1.0",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "DISCOVERED_PROTOCOL_ENV_VARS",
    },
    {
      "data": "0.1.0",
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_VERSION",
    },
    {
      "data": {
        "data": "jest",
        "type": "ADAPTER_PATH",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_START",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_END",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_END",
    },
  ],
}
`;

exports[`maven adapter runs a subset of tests 1`] = `
{
  "logs": [
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_END",
    },
    {
      "data": {
        "TEP_LOG_FILE_NAME": "logs/logs.json",
        "TEP_TESTS_TO_RUN": "test1|test2",
        "TEP_VERSION": "0.1.0",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "DISCOVERED_PROTOCOL_ENV_VARS",
    },
    {
      "data": "0.1.0",
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_VERSION",
    },
    {
      "data": {
        "data": "maven",
        "type": "ADAPTER_PATH",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_START",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_END",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_END",
    },
  ],
}
`;

exports[`maven adapter runs all tests 1`] = `
{
  "logs": [
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_END",
    },
    {
      "data": {
        "TEP_LOG_FILE_NAME": "logs/logs.json",
        "TEP_VERSION": "0.1.0",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "DISCOVERED_PROTOCOL_ENV_VARS",
    },
    {
      "data": "0.1.0",
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_VERSION",
    },
    {
      "data": {
        "data": "maven",
        "type": "ADAPTER_PATH",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_START",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_END",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_END",
    },
  ],
}
`;

exports[`pytest adapter runs a subset of tests 1`] = `
{
  "?xml": {
    "attr_encoding": "utf-8",
    "attr_version": 1,
  },
  "testsuites": {
    "testsuite": {
      "attr_errors": 0,
      "attr_failures": 0,
      "attr_hostname": "MOCK_VALUE",
      "attr_name": "pytest",
      "attr_skipped": 0,
      "attr_tests": 2,
      "attr_time": "MOCK_VALUE",
      "attr_timestamp": "MOCK_VALUE",
      "testcase": [
        {
          "attr_classname": "test_example",
          "attr_name": "test1",
          "attr_time": "MOCK_VALUE",
        },
        {
          "attr_classname": "test_example",
          "attr_name": "test2",
          "attr_time": "MOCK_VALUE",
        },
      ],
    },
  },
}
`;

exports[`pytest adapter runs a subset of tests 2`] = `
{
  "logs": [
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_END",
    },
    {
      "data": {
        "TEP_LOG_FILE_NAME": "logs/logs.json",
        "TEP_TESTS_TO_RUN": "test1|test2",
        "TEP_TEST_REPORT_FILE_NAME": "report.xml",
        "TEP_TEST_REPORT_FORMAT": "junitxml",
        "TEP_TEST_REPORT_OUTPUT_DIR": "reports",
        "TEP_VERSION": "0.1.0",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "DISCOVERED_PROTOCOL_ENV_VARS",
    },
    {
      "data": "0.1.0",
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_VERSION",
    },
    {
      "data": {
        "data": "pytest",
        "type": "ADAPTER_PATH",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_START",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_END",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_END",
    },
  ],
}
`;

exports[`pytest adapter runs all tests 1`] = `
{
  "?xml": {
    "attr_encoding": "utf-8",
    "attr_version": 1,
  },
  "testsuites": {
    "testsuite": {
      "attr_errors": 0,
      "attr_failures": 0,
      "attr_hostname": "MOCK_VALUE",
      "attr_name": "pytest",
      "attr_skipped": 0,
      "attr_tests": 3,
      "attr_time": "MOCK_VALUE",
      "attr_timestamp": "MOCK_VALUE",
      "testcase": [
        {
          "attr_classname": "test_example",
          "attr_name": "test1",
          "attr_time": "MOCK_VALUE",
        },
        {
          "attr_classname": "test_example",
          "attr_name": "test2",
          "attr_time": "MOCK_VALUE",
        },
        {
          "attr_classname": "test_example",
          "attr_name": "test3",
          "attr_time": "MOCK_VALUE",
        },
      ],
    },
  },
}
`;

exports[`pytest adapter runs all tests 2`] = `
{
  "logs": [
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_READ_END",
    },
    {
      "data": {
        "TEP_LOG_FILE_NAME": "logs/logs.json",
        "TEP_TEST_REPORT_FILE_NAME": "report.xml",
        "TEP_TEST_REPORT_FORMAT": "junitxml",
        "TEP_TEST_REPORT_OUTPUT_DIR": "reports",
        "TEP_VERSION": "0.1.0",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "DISCOVERED_PROTOCOL_ENV_VARS",
    },
    {
      "data": "0.1.0",
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "PROTOCOL_VERSION",
    },
    {
      "data": {
        "data": "pytest",
        "type": "ADAPTER_PATH",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_START",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "data": {
        "type": "ADAPTER_LOAD_END",
      },
      "level": "DEBUG",
      "timestamp": "MOCK_VALUE",
      "type": "CUSTOM",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_START",
    },
    {
      "level": "INFO",
      "timestamp": "MOCK_VALUE",
      "type": "TEST_RUN_END",
    },
  ],
}
`;
